--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
@@ -39,15 +39,15 @@
     "ValueTimeLimitSingleHour": "L\u00edmite de tiempo: 1 hora",
     "ValueTimeLimitMultiHour": "L\u00edmite de tiempo: {0} horas",
     "PluginCategoryGeneral": "General",
-    "PluginCategoryContentProvider": "Content Providers",
-    "PluginCategoryScreenSaver": "Screen Savers",
-    "PluginCategoryTheme": "Themes",
-    "PluginCategorySync": "Sync",
-    "PluginCategorySocialIntegration": "Social Networks",
-    "PluginCategoryNotifications": "Notifications",
-    "PluginCategoryMetadata": "Metadata",
-    "PluginCategoryLiveTV": "Live TV",
-    "PluginCategoryChannel": "Channels",
+    "PluginCategoryContentProvider": "Proveedores de Contenido",
+    "PluginCategoryScreenSaver": "Protectores de Pantalla",
+    "PluginCategoryTheme": "Temas",
+    "PluginCategorySync": "Sinc",
+    "PluginCategorySocialIntegration": "Redes Sociales",
+    "PluginCategoryNotifications": "Notificaciones",
+    "PluginCategoryMetadata": "Metadatos",
+    "PluginCategoryLiveTV": "TV en Vivo",
+    "PluginCategoryChannel": "Canales",
     "HeaderSearch": "Buscar",
     "ValueDateCreated": "Fecha de creaci\u00f3n: {0}",
     "LabelArtist": "Artista",
@@ -88,7 +88,7 @@
     "ButtonTakeTheTour": "Haga el recorrido",
     "HeaderWelcomeBack": "\u00a1Bienvenido nuevamente!",
     "TitleSync": "Sinc",
-    "TitlePlugins": "Plugins",
+    "TitlePlugins": "Complementos",
     "ButtonTakeTheTourToSeeWhatsNew": "Inice el tour para ver que hay de nuevo",
     "MessageNoSyncJobsFound": "No se han encontrado trabajos de sincronizaci\u00f3n. Cree trabajos de sincronizaci\u00f3n empleando los botones de Sinc que se encuentran en la intergface web.",
     "HeaderLibraryAccess": "Acceso a la Biblioteca",
@@ -109,10 +109,10 @@
     "LabelVersionInstalled": "{0} instalado",
     "LabelNumberReviews": "{0} Rese\u00f1as",
     "LabelFree": "Gratis",
-    "HeaderPlaybackError": "Playback Error",
-    "MessagePlaybackErrorNotAllowed": "You're currently not authorized to play this content. Please contact your system administrator for details.",
-    "MessagePlaybackErrorNoCompatibleStream": "No compatible streams are currently available. Please try again later.",
-    "MessagePlaybackErrorRateLimitExceeded": "Your playback rate limit has been exceeded. Please contact your system administrator for details.",
+    "HeaderPlaybackError": "Error de Reproducci\u00f3n",
+    "MessagePlaybackErrorNotAllowed": "Actualmente no esta autorizado para reproducir este contenido. Por favor contacte a su administrador de sistema para mas informaci\u00f3n.",
+    "MessagePlaybackErrorNoCompatibleStream": "No hay streams compatibles en este en este momento. Por favor intente de nuevo mas tarde.",
+    "MessagePlaybackErrorRateLimitExceeded": "Su limite de transferencia ha sido excedido. Por favor contacte a su administrador de sistema para mas informaci\u00f3n.",
     "HeaderSelectAudio": "Seleccionar Audio",
     "HeaderSelectSubtitles": "Seleccionar Subtitulos",
     "ButtonMarkForRemoval": "Remover de dispositivo",
@@ -713,7 +713,7 @@
     "ButtonSync": "SInc",
     "SyncMedia": "Sincronizar Medios",
     "HeaderCancelSyncJob": "Cancelar Sinc.",
-    "CancelSyncJobConfirmation": "\u00bfEsta seguro de querer cancelar este trabajo de sincronizaci\u00f3n?",
+    "CancelSyncJobConfirmation": "Cancelling the sync job will remove synced media from the device during the next sync process. Are you sure you wish to proceed?",
     "TabSync": "Sinc",
     "MessagePleaseSelectDeviceToSyncTo": "Por favor seleccione un dispositivo con el que desea sincronizar.",
     "MessageSyncJobCreated": "Trabajo de sinc. creado.",
