--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
@@ -38,16 +38,16 @@
     "ErrorLaunchingChromecast": "Une erreur a \u00e9t\u00e9 rencontr\u00e9e lors du lancement de Chromecast. Veuillez vous assurer que votre appareil est bien connect\u00e9 \u00e0 votre r\u00e9seau sans-fil.",
     "ValueTimeLimitSingleHour": "Limite de temps : 1 heure",
     "ValueTimeLimitMultiHour": "Limite de temps : {0} heures",
-    "PluginCategoryGeneral": "General",
-    "PluginCategoryContentProvider": "Content Providers",
-    "PluginCategoryScreenSaver": "Screen Savers",
-    "PluginCategoryTheme": "Themes",
+    "PluginCategoryGeneral": "G\u00e9n\u00e9ral",
+    "PluginCategoryContentProvider": "Fournisseurs de contenus",
+    "PluginCategoryScreenSaver": "Ecrans de veille",
+    "PluginCategoryTheme": "Th\u00e8mes",
     "PluginCategorySync": "Sync",
-    "PluginCategorySocialIntegration": "Social Networks",
+    "PluginCategorySocialIntegration": "R\u00e9seaux sociaux",
     "PluginCategoryNotifications": "Notifications",
-    "PluginCategoryMetadata": "Metadata",
-    "PluginCategoryLiveTV": "Live TV",
-    "PluginCategoryChannel": "Channels",
+    "PluginCategoryMetadata": "M\u00e9tadonn\u00e9es",
+    "PluginCategoryLiveTV": "TV en Direct",
+    "PluginCategoryChannel": "Cha\u00eenes",
     "HeaderSearch": "Recherche",
     "ValueDateCreated": "Date de cr\u00e9ation : {0}",
     "LabelArtist": "Artiste",
@@ -109,10 +109,10 @@
     "LabelVersionInstalled": "{0} install\u00e9(s)",
     "LabelNumberReviews": "{0} Critique(s)",
     "LabelFree": "Gratuit",
-    "HeaderPlaybackError": "Playback Error",
-    "MessagePlaybackErrorNotAllowed": "You're currently not authorized to play this content. Please contact your system administrator for details.",
-    "MessagePlaybackErrorNoCompatibleStream": "No compatible streams are currently available. Please try again later.",
-    "MessagePlaybackErrorRateLimitExceeded": "Your playback rate limit has been exceeded. Please contact your system administrator for details.",
+    "HeaderPlaybackError": "Erreur de lecture",
+    "MessagePlaybackErrorNotAllowed": "Vous n'\u00eates pas autoris\u00e9 \u00e0 lire ce contenu. Veuillez contacter votre administrateur syst\u00e8me pour plus de d\u00e9tails.",
+    "MessagePlaybackErrorNoCompatibleStream": "Aucun flux compatible n'est actuellement disponible. Veuillez r\u00e9essayer plus tard.",
+    "MessagePlaybackErrorRateLimitExceeded": "Vous avez d\u00e9pass\u00e9 votre limite de lecture. Veuillez contacter votre administrateur syst\u00e8me pour plus de d\u00e9tails.",
     "HeaderSelectAudio": "S\u00e9lectionner audio",
     "HeaderSelectSubtitles": "S\u00e9lectionner sous-titres",
     "ButtonMarkForRemoval": "Supprimer de l'appareil",
@@ -713,7 +713,7 @@
     "ButtonSync": "Sync",
     "SyncMedia": "Sync. les m\u00e9dias",
     "HeaderCancelSyncJob": "Annuler la sync.",
-    "CancelSyncJobConfirmation": "\u00cates vous sure de vouloir annuler cette synchronisation?",
+    "CancelSyncJobConfirmation": "Cancelling the sync job will remove synced media from the device during the next sync process. Are you sure you wish to proceed?",
     "TabSync": "Sync",
     "MessagePleaseSelectDeviceToSyncTo": "Veuillez s\u00e9lectionner un p\u00e9riph\u00e9rique avec lequel se synchroniser.",
     "MessageSyncJobCreated": "Job de synchronisation cr\u00e9\u00e9.",
