--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
@@ -36,18 +36,18 @@
     "MessageKeyUpdated": "Grazie. La vostra chiave supporter \u00e8 stato aggiornato.",
     "MessageKeyRemoved": "Grazie. La vostra chiave supporter \u00e8 stata rimossa.",
     "ErrorLaunchingChromecast": "Si \u00e8 verificato un errore all'avvio di chromecast. Assicurati che il tuo dispositivo sia connesso alla rete wireless.",
-    "ValueTimeLimitSingleHour": "Time limit: 1 hour",
-    "ValueTimeLimitMultiHour": "Time limit: {0} hours",
-    "PluginCategoryGeneral": "General",
-    "PluginCategoryContentProvider": "Content Providers",
-    "PluginCategoryScreenSaver": "Screen Savers",
-    "PluginCategoryTheme": "Themes",
-    "PluginCategorySync": "Sync",
+    "ValueTimeLimitSingleHour": "Tempo limite: 1 ora",
+    "ValueTimeLimitMultiHour": "Tempo limite: {0} ore",
+    "PluginCategoryGeneral": "Generale",
+    "PluginCategoryContentProvider": "Fornitori di contenuti",
+    "PluginCategoryScreenSaver": "Salva schermo",
+    "PluginCategoryTheme": "Temi",
+    "PluginCategorySync": "Sincr.",
     "PluginCategorySocialIntegration": "Social Networks",
-    "PluginCategoryNotifications": "Notifications",
-    "PluginCategoryMetadata": "Metadata",
-    "PluginCategoryLiveTV": "Live TV",
-    "PluginCategoryChannel": "Channels",
+    "PluginCategoryNotifications": "Notifiche",
+    "PluginCategoryMetadata": "Metadati",
+    "PluginCategoryLiveTV": "TV in diretta",
+    "PluginCategoryChannel": "Canali",
     "HeaderSearch": "Ricerca",
     "ValueDateCreated": "Data di creazione {0}",
     "LabelArtist": "Artista",
@@ -81,7 +81,7 @@
     "ButtonAddToCollection": "Aggiungi alla collezione",
     "HeaderSelectCertificatePath": "Seleziona il percorso del Certificato",
     "ConfirmMessageScheduledTaskButton": "L'operazione viene normalmente eseguita come operazione pianificata. Pu\u00f2 anche essere avviata manualmente da qui. Per configurare le operazioni pianificate, vedi:",
-    "HeaderSupporterBenefit": "A supporter membership provides additional benefits such as access to sync, premium plugins, internet channel content, and more. {0}Learn more{1}.",
+    "HeaderSupporterBenefit": "L'iscrizione come supporter da benefici addizionali, come l'accesso alla sincronizzazione, i plugin premium, canali con contenuto internet, e altro. {0}Scopri di pi\u00f9{1}.",
     "LabelSyncNoTargetsHelp": "Sembra che al momento non avete applicazioni che supportano la sincronizzazione.",
     "HeaderWelcomeToMediaBrowserServerDashboard": "Benvenuti nel Dashboard di Media Browser",
     "HeaderWelcomeToMediaBrowserWebClient": "Benvenuti nel Media Browser Web client",
@@ -109,10 +109,10 @@
     "LabelVersionInstalled": "{0} installato",
     "LabelNumberReviews": "{0} Recensioni",
     "LabelFree": "Gratis",
-    "HeaderPlaybackError": "Playback Error",
-    "MessagePlaybackErrorNotAllowed": "You're currently not authorized to play this content. Please contact your system administrator for details.",
-    "MessagePlaybackErrorNoCompatibleStream": "No compatible streams are currently available. Please try again later.",
-    "MessagePlaybackErrorRateLimitExceeded": "Your playback rate limit has been exceeded. Please contact your system administrator for details.",
+    "HeaderPlaybackError": "Errore di riproduzione",
+    "MessagePlaybackErrorNotAllowed": "Al momento non sei autorizzato a riprodurre questo contenuto. Per favore contatta l'amministratore del sistema per ulteriori dettagli",
+    "MessagePlaybackErrorNoCompatibleStream": "Nessuna trasmissione compatibile \u00e8 al momento disponibile. Per favore riprova in seguito",
+    "MessagePlaybackErrorRateLimitExceeded": "La tua quota di riproduzione \u00e8 stata raggiunta. Per favore contatta l'amministratore del sistema per ulteriori dettagli",
     "HeaderSelectAudio": "Seleziona audio",
     "HeaderSelectSubtitles": "Seleziona sottotitoli",
     "ButtonMarkForRemoval": "Rimuovi dal dispositivo",
@@ -713,7 +713,7 @@
     "ButtonSync": "Sinc.",
     "SyncMedia": "Sync media",
     "HeaderCancelSyncJob": "Cancel Sync",
-    "CancelSyncJobConfirmation": "Sei sicuro di voler annullare questo lavoro di sincronizzazione?",
+    "CancelSyncJobConfirmation": "Cancelling the sync job will remove synced media from the device during the next sync process. Are you sure you wish to proceed?",
     "TabSync": "Sinc",
     "MessagePleaseSelectDeviceToSyncTo": "Selezionare un dispositivo per la sincronizzazione",
     "MessageSyncJobCreated": "Attivit\u00e0 di Sincronizz. Creata",
