--- a/MediaBrowser.Server.Implementations/Localization/Server/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/de.json
@@ -61,9 +61,9 @@
     "HeaderEasyPinCode": "Einfacher PIN Code",
     "HeaderGrownupsOnly": "Nur Erwachsene!",
     "DividerOr": "-- oder --",
-    "HeaderInstalledServices": "Installed Services",
-    "HeaderAvailableServices": "Available Services",
-    "MessageNoServicesInstalled": "No services are currently installed.",
+    "HeaderInstalledServices": "Installierte Dienste",
+    "HeaderAvailableServices": "Verf\u00fcgbare Dienste",
+    "MessageNoServicesInstalled": "Keine Dienste installiert.",
     "HeaderToAccessPleaseEnterEasyPinCode": "Bitte geben Sie Ihren vereinfachten PIN Code ein:",
     "KidsModeAdultInstruction": "Verwenden Sie das Schloss-Symbol in der rechten oberen Ecke um den Kindermodus zu verlassen oder zu konfigurieren. Sie ben\u00f6tigen daf\u00fcr Ihren PIN Code.",
     "ButtonConfigurePinCode": "PIN Code festlegen",
