--- a/MediaBrowser.Server.Implementations/Localization/Server/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/es_MX.json
@@ -61,9 +61,9 @@
     "HeaderEasyPinCode": "C\u00f3digo Pin Sencillo",
     "HeaderGrownupsOnly": "\u00a1Solo Adultos!",
     "DividerOr": "--o--",
-    "HeaderInstalledServices": "Installed Services",
-    "HeaderAvailableServices": "Available Services",
-    "MessageNoServicesInstalled": "No services are currently installed.",
+    "HeaderInstalledServices": "Servicios Instalados",
+    "HeaderAvailableServices": "Servicios Disponibles",
+    "MessageNoServicesInstalled": "No hay servicios instalados en este momento.",
     "HeaderToAccessPleaseEnterEasyPinCode": "Para acceder, por favor introduzca su c\u00f3digo pin sencillo",
     "KidsModeAdultInstruction": "Haga clic en el icono de candado en la esquina inferior derecha para configurar o abandonar el modo para ni\u00f1os.",
     "ButtonConfigurePinCode": "Configurar c\u00f3digo pin",
@@ -226,7 +226,7 @@
     "ScheduledTasksTitle": "Tareas Programadas",
     "TabMyPlugins": "Mis Complementos",
     "TabCatalog": "Cat\u00e1logo",
-    "TitlePlugins": "Plugins",
+    "TitlePlugins": "Complementos",
     "HeaderAutomaticUpdates": "Actualizaciones Autom\u00e1ticas",
     "HeaderNowPlaying": "Reproduciendo Ahora",
     "HeaderLatestAlbums": "\u00c1lbums Recientes",
@@ -682,7 +682,7 @@
     "NotificationOptionNewLibraryContentMultiple": "Nuevo contenido agregado (varios)",
     "NotificationOptionCameraImageUploaded": "Imagen de la c\u00e1mara subida",
     "NotificationOptionUserLockedOut": "Usuario bloqueado",
-    "HeaderSendNotificationHelp": "By default, notifications are delivered to your dashboard inbox. Browse the plugin catalog to install additional notification options.",
+    "HeaderSendNotificationHelp": "Por defecto, las notificaciones son enviadas a su bandeja de entrada del panel de control. Navegue el cat\u00e1logo de  complementos para instalar opciones de notificaci\u00f3n adicionales.",
     "NotificationOptionServerRestartRequired": "Reinicio del servidor requerido",
     "LabelNotificationEnabled": "Habilitar esta notificaci\u00f3n",
     "LabelMonitorUsers": "Monitorear actividad desde:",
