--- a/MediaBrowser.Server.Implementations/Localization/Server/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/fr.json
@@ -61,9 +61,9 @@
     "HeaderEasyPinCode": "Code Easy Pin",
     "HeaderGrownupsOnly": "R\u00e9serv\u00e9 aux adultes !",
     "DividerOr": "-- ou --",
-    "HeaderInstalledServices": "Installed Services",
-    "HeaderAvailableServices": "Available Services",
-    "MessageNoServicesInstalled": "No services are currently installed.",
+    "HeaderInstalledServices": "Services install\u00e9s",
+    "HeaderAvailableServices": "Services disponibles",
+    "MessageNoServicesInstalled": "Aucun service n'est actuellement install\u00e9.",
     "HeaderToAccessPleaseEnterEasyPinCode": "Veuillez entrez votre code Easy PIN :",
     "KidsModeAdultInstruction": "Cliquez sur l'ic\u00f4ne en forme de cadenas en bas \u00e0 droite pour configurer ou quitter le mode Enfants. Votre code PIN sera requis.",
     "ButtonConfigurePinCode": "Configurer le code PIN",
@@ -682,7 +682,7 @@
     "NotificationOptionNewLibraryContentMultiple": "Nouveau contenu ajout\u00e9 (multiple)",
     "NotificationOptionCameraImageUploaded": "L'image de l'appareil photo a \u00e9t\u00e9 upload\u00e9e",
     "NotificationOptionUserLockedOut": "Utilisateur verrouill\u00e9",
-    "HeaderSendNotificationHelp": "By default, notifications are delivered to your dashboard inbox. Browse the plugin catalog to install additional notification options.",
+    "HeaderSendNotificationHelp": "Par d\u00e9faut, les notifications sont pr\u00e9sent\u00e9es dans la bo\u00eete de messagerie de votre tableau de bord. Parcourrez le catalogue de plugins pour installer des options suppl\u00e9mentaires de notification.",
     "NotificationOptionServerRestartRequired": "Un red\u00e9marrage du serveur est requis",
     "LabelNotificationEnabled": "Activer cette notification",
     "LabelMonitorUsers": "Surveiller les activit\u00e9s de:",
