--- a/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
@@ -61,9 +61,9 @@
     "HeaderEasyPinCode": "C\u00f3digo de Pin Facil",
     "HeaderGrownupsOnly": "Adultos Apenas!",
     "DividerOr": "-- ou --",
-    "HeaderInstalledServices": "Installed Services",
-    "HeaderAvailableServices": "Available Services",
-    "MessageNoServicesInstalled": "No services are currently installed.",
+    "HeaderInstalledServices": "Servi\u00e7os Instalados",
+    "HeaderAvailableServices": "Servi\u00e7os Dispon\u00edveis",
+    "MessageNoServicesInstalled": "N\u00e3o existem servi\u00e7os instalados atualmente.",
     "HeaderToAccessPleaseEnterEasyPinCode": "Para acessar, por favor digite seu c\u00f3digo pin f\u00e1cil",
     "KidsModeAdultInstruction": "Clique no \u00edcone de bloqueio no canto inferior direito para configurar ou deixar o modo infantil. Seu c\u00f3digo pin ser\u00e1 necess\u00e1rio.",
     "ButtonConfigurePinCode": "Configurar c\u00f3digo pin",
