--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/cs.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/cs.json
@@ -713,7 +713,7 @@
     "ButtonSync": "Sync",
     "SyncMedia": "Sync Media",
     "HeaderCancelSyncJob": "Cancel Sync",
-    "CancelSyncJobConfirmation": "Are you sure you wish to cancel this sync job?",
+    "CancelSyncJobConfirmation": "Cancelling the sync job will remove synced media from the device during the next sync process. Are you sure you wish to proceed?",
     "TabSync": "Sync",
     "MessagePleaseSelectDeviceToSyncTo": "Please select a device to sync to.",
     "MessageSyncJobCreated": "Sync job created.",
