--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
@@ -38,16 +38,16 @@
     "ErrorLaunchingChromecast": "W\u00e4hrend des startens von Chromecast ist ein Fehler aufgetreten. Bitte stelle sicher, dass dein Ger\u00e4te mit dem WLAN verbunden ist.",
     "ValueTimeLimitSingleHour": "Zeitlimit: 1 Stunde",
     "ValueTimeLimitMultiHour": "Zeitlimit: {0} Stunden",
-    "PluginCategoryGeneral": "General",
-    "PluginCategoryContentProvider": "Content Providers",
-    "PluginCategoryScreenSaver": "Screen Savers",
+    "PluginCategoryGeneral": "Allgemein",
+    "PluginCategoryContentProvider": "Inhaltsanbieter",
+    "PluginCategoryScreenSaver": "Bildschirmschoner",
     "PluginCategoryTheme": "Themes",
-    "PluginCategorySync": "Sync",
-    "PluginCategorySocialIntegration": "Social Networks",
-    "PluginCategoryNotifications": "Notifications",
-    "PluginCategoryMetadata": "Metadata",
+    "PluginCategorySync": "Synchronisation",
+    "PluginCategorySocialIntegration": "Soziale Netzwerke",
+    "PluginCategoryNotifications": "Benachrichtigungen",
+    "PluginCategoryMetadata": "Metadaten",
     "PluginCategoryLiveTV": "Live TV",
-    "PluginCategoryChannel": "Channels",
+    "PluginCategoryChannel": "Kan\u00e4le",
     "HeaderSearch": "Suche",
     "ValueDateCreated": "Erstellungsdatum: {0}",
     "LabelArtist": "Interpret",
@@ -81,7 +81,7 @@
     "ButtonAddToCollection": "Zu Sammlung hinzuf\u00fcgen",
     "HeaderSelectCertificatePath": "W\u00e4hlen Sie einen Zertifikat Ordner",
     "ConfirmMessageScheduledTaskButton": "Diese Aufgabe l\u00e4uft normalerweise automatisch als geplante Aufgabe. Sie kann jedoch auch manuell von hier gestartet werden. F\u00fcr Einstellungen der geplanten Aufgaben schauen Sie hier:",
-    "HeaderSupporterBenefit": "A supporter membership provides additional benefits such as access to sync, premium plugins, internet channel content, and more. {0}Learn more{1}.",
+    "HeaderSupporterBenefit": "Eine Unterst\u00fctzer-Mitgliedschaft bietet weitere Funktionen wie z.B. Zugriff auf die Synchronisation, Premium-Plugins, Internet Kan\u00e4le und mehr. {0}Erfahren Sie mehr{1}.",
     "LabelSyncNoTargetsHelp": "Es sieht so aus als w\u00fcrden Sie aktuell keine Apps verwenden, die Synchronisation unterst\u00fctzen.",
     "HeaderWelcomeToMediaBrowserServerDashboard": "Willkommen zur Media Browser \u00dcbersicht",
     "HeaderWelcomeToMediaBrowserWebClient": "Willkommen zum Media Browser Web Client",
@@ -713,7 +713,7 @@
     "ButtonSync": "Synchronisieren",
     "SyncMedia": "Synchronisiere Medien",
     "HeaderCancelSyncJob": "Synchronisierung abbrechen",
-    "CancelSyncJobConfirmation": "M\u00f6chten Sie die Synchronisations-Aufgabe wirklich abbrechen?",
+    "CancelSyncJobConfirmation": "Cancelling the sync job will remove synced media from the device during the next sync process. Are you sure you wish to proceed?",
     "TabSync": "Synchronisieren",
     "MessagePleaseSelectDeviceToSyncTo": "Bitte w\u00e4hlen Sie ein zu synchronisierendes Ger\u00e4t.",
     "MessageSyncJobCreated": "Synchronisations-Aufgabe erstellt.",
