--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
@@ -38,16 +38,16 @@
     "ErrorLaunchingChromecast": "Ocorreu um erro ao iniciar o chromecast. Por favor verifique se seu dispositivo est\u00e1 conectado \u00e0 sua rede sem fio.",
     "ValueTimeLimitSingleHour": "Limite de tempo: 1 hora",
     "ValueTimeLimitMultiHour": "Limite de tempo: {0} horas",
-    "PluginCategoryGeneral": "General",
-    "PluginCategoryContentProvider": "Content Providers",
-    "PluginCategoryScreenSaver": "Screen Savers",
-    "PluginCategoryTheme": "Themes",
-    "PluginCategorySync": "Sync",
-    "PluginCategorySocialIntegration": "Social Networks",
-    "PluginCategoryNotifications": "Notifications",
-    "PluginCategoryMetadata": "Metadata",
-    "PluginCategoryLiveTV": "Live TV",
-    "PluginCategoryChannel": "Channels",
+    "PluginCategoryGeneral": "Geral",
+    "PluginCategoryContentProvider": "Provedores de Conte\u00fado",
+    "PluginCategoryScreenSaver": "Protetores de Tela",
+    "PluginCategoryTheme": "Temas",
+    "PluginCategorySync": "Sincroniza\u00e7\u00e3o",
+    "PluginCategorySocialIntegration": "Redes Sociais",
+    "PluginCategoryNotifications": "Notifica\u00e7\u00f5es",
+    "PluginCategoryMetadata": "Metadados",
+    "PluginCategoryLiveTV": "TV ao Vivo",
+    "PluginCategoryChannel": "Canais",
     "HeaderSearch": "Busca",
     "ValueDateCreated": "Data da cria\u00e7\u00e3o: {0}",
     "LabelArtist": "Artista",
@@ -713,7 +713,7 @@
     "ButtonSync": "Sincronizar",
     "SyncMedia": "Sincronizar M\u00eddia",
     "HeaderCancelSyncJob": "Cancelar Sincroniza\u00e7\u00e3o",
-    "CancelSyncJobConfirmation": "Deseja realmente cancelar esta tarefa de sincroniza\u00e7\u00e3o?",
+    "CancelSyncJobConfirmation": "Cancelling the sync job will remove synced media from the device during the next sync process. Are you sure you wish to proceed?",
     "TabSync": "Sincroniza\u00e7\u00e3o",
     "MessagePleaseSelectDeviceToSyncTo": "Por favor, selecione um dispositivo para sincronizar.",
     "MessageSyncJobCreated": "Tarefa de sincroniza\u00e7\u00e3o criada.",
