--- a/MediaBrowser.Server.Implementations/Localization/Server/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/it.json
@@ -48,10 +48,10 @@
     "LabelDashboardSourcePathHelp": "se si sta eseguendo il server da una sorgente, specifica il percorso dell'interfaccia. Tutti i file per i client saranno presi da questo percorso",
     "ButtonConvertMedia": "Converti media",
     "ButtonOrganize": "Organizza",
-    "LabelPinCode": "Pin code:",
+    "LabelPinCode": "Codice Pin",
     "ButtonOk": "OK",
     "ButtonCancel": "Annulla",
-    "ButtonExit": "Exit",
+    "ButtonExit": "Esci",
     "ButtonNew": "Nuovo",
     "HeaderTV": "TV",
     "HeaderAudio": "Audio",
@@ -59,15 +59,15 @@
     "HeaderPaths": "Percorsi",
     "CategorySync": "Sinc.zza",
     "HeaderEasyPinCode": "Codice pin",
-    "HeaderGrownupsOnly": "Grown-ups Only!",
-    "DividerOr": "-- or --",
-    "HeaderInstalledServices": "Installed Services",
-    "HeaderAvailableServices": "Available Services",
-    "MessageNoServicesInstalled": "No services are currently installed.",
-    "HeaderToAccessPleaseEnterEasyPinCode": "To access, please enter your easy pin code",
-    "KidsModeAdultInstruction": "Click the lock icon in the bottom right to configure or leave kids mode. Your pin code will be required.",
-    "ButtonConfigurePinCode": "Configure pin code",
-    "HeaderAdultsReadHere": "Adults Read Here!",
+    "HeaderGrownupsOnly": "Solo adulti",
+    "DividerOr": "- o -",
+    "HeaderInstalledServices": "Servizi installati",
+    "HeaderAvailableServices": "Servizi disponibili",
+    "MessageNoServicesInstalled": "Nessun servizio attualmente installato",
+    "HeaderToAccessPleaseEnterEasyPinCode": "Per accedere per favore inserisci il tuo codice pin",
+    "KidsModeAdultInstruction": "Clicca sull'icona del lucchetto nell'angolo in basso a destra per configurare o abbandonare la modalit\u00e0 bambini. Verr\u00e0 richiesto il tuo codice pin",
+    "ButtonConfigurePinCode": "Configura codice pin",
+    "HeaderAdultsReadHere": "Adulti leggete qui!",
     "RegisterWithPayPal": "Registra con PayPal",
     "HeaderSyncRequiresSupporterMembership": "La sincronizzazione richiede un'iscrizione come supporter",
     "HeaderEnjoyDayTrial": "Goditi la tua prova gratuita di 14 giorni",
@@ -81,8 +81,8 @@
     "OptionDetectArchiveFilesAsMediaHelp": "se attivato, i file con estensione .rar e .zip saranno considerati come file multimediali.",
     "LabelEnterConnectUserName": "Nome Utente o email:",
     "LabelEnterConnectUserNameHelp": "Questo \u00e8 il tuo nome utente, o password, per il tuo account online di Media Browser.",
-    "LabelEnableEnhancedMovies": "Enable enhanced movie displays",
-    "LabelEnableEnhancedMoviesHelp": "When enabled, movies will be displayed as folders to include trailers, extras, cast & crew, and other related content.",
+    "LabelEnableEnhancedMovies": "Abilita le visuali film migliorate",
+    "LabelEnableEnhancedMoviesHelp": "Quando abilitato, i film verranno mostrati come cartelle che includono i trailer, gli extra, il cast & crew, e altri contenuti correlati.",
     "HeaderSyncJobInfo": "Attiv. di Sinc.",
     "FolderTypeMixed": "contenuto misto",
     "FolderTypeMovies": "Film",
@@ -103,7 +103,7 @@
     "ReferToMediaLibraryWiki": "Fare riferimento alla wiki libreria multimediale.",
     "LabelCountry": "Nazione:",
     "LabelLanguage": "Lingua:",
-    "LabelTimeLimitHours": "Time limit (hours):",
+    "LabelTimeLimitHours": "Tempo limite (ore):",
     "ButtonJoinTheDevelopmentTeam": "Unisciti al Team di Sviluppo",
     "HeaderPreferredMetadataLanguage": "Lingua dei metadati preferita:",
     "LabelSaveLocalMetadata": "Salva immagini e metadati nelle cartelle multimediali",
@@ -681,8 +681,8 @@
     "NotificationOptionNewLibraryContent": "Nuovo contenuto aggiunto",
     "NotificationOptionNewLibraryContentMultiple": "Nuovi contenuti aggiunti",
     "NotificationOptionCameraImageUploaded": "Immagine fotocamera caricata",
-    "NotificationOptionUserLockedOut": "User locked out",
-    "HeaderSendNotificationHelp": "By default, notifications are delivered to your dashboard inbox. Browse the plugin catalog to install additional notification options.",
+    "NotificationOptionUserLockedOut": "Utente bloccato",
+    "HeaderSendNotificationHelp": "Per impostazione predefinita, le notifiche vengono inviate alla casella della pagina principale. Sfoglia il catalogo plugin da installare opzioni di notifica aggiuntive.",
     "NotificationOptionServerRestartRequired": "Riavvio del server necessario",
     "LabelNotificationEnabled": "Abilita questa notifica",
     "LabelMonitorUsers": "Monitorare l'attivit\u00e0 da:",
@@ -1063,7 +1063,7 @@
     "OptionBox": "Box",
     "OptionBoxRear": "Box rear",
     "OptionDisc": "Disco",
-    "OptionIcon": "Icon",
+    "OptionIcon": "Icona",
     "OptionLogo": "Logo",
     "OptionMenu": "Menu",
     "OptionScreenshot": "Immagine",
@@ -1108,7 +1108,7 @@
     "SubtitleDownloadFailureForItem": "Sottotitoli non scaricati per {0}",
     "LabelRunningTimeValue": "Durata: {0}",
     "LabelIpAddressValue": "Indirizzo IP: {0}",
-    "UserLockedOutWithName": "User {0} has been locked out",
+    "UserLockedOutWithName": "L'utente {0} \u00e8 stato bloccato",
     "UserConfigurationUpdatedWithName": "Configurazione utente \u00e8 stata aggiornata per {0}",
     "UserCreatedWithName": "Utente {0} \u00e8 stato creato",
     "UserPasswordChangedWithName": "Password utente cambiata per {0}",
@@ -1371,6 +1371,6 @@
     "TabSyncJobs": "Attiv. di Sinc.",
     "LabelTagFilterMode": "Modalit\u00e0:",
     "LabelTagFilterAllowModeHelp": "Se i tag permessi vengono utilizzati come parte di una struttura di cartelle profondamente nidificate, il contenuto che viene etichettato richieder\u00e0 cartelle principali di essere etichettato come bene.",
-    "HeaderThisUserIsCurrentlyDisabled": "This user is currently disabled",
-    "MessageReenableUser": "See below to reenable"
+    "HeaderThisUserIsCurrentlyDisabled": "Questo utente \u00e8 al momento disabilitato",
+    "MessageReenableUser": "Guarda in basso per ri-abilitare"
 }
