remove more reliance on ActiveService

--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -586,6 +586,7 @@
     "ValuePremieres": "Premieres {0}",
     "ValueStudio": "Studio: {0}",
     "ValueStudios": "Studios: {0}",
+    "ValueStatus": "Status: {0}",
     "ValueSpecialEpisodeName": "Special - {0}",
     "LabelLimit": "Limit:",
     "ValueLinks": "Links: {0}",
